--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ padding: 0;
 	visibility: hidden;
 	font-family: "Arial";
 	word-wrap: break-word; 
+	color: yellow; /*default color*/ 
 }
 
 .debug {
