--- a/style.css
+++ b/style.css
@@ -18,12 +18,13 @@ padding: 0;
     font-size: 1.25rem;
     /* 20px */
     font-weight: 700;
+	font-family: "Arial";
     text-overflow: ellipsis;
     white-space: nowrap;
     cursor: pointer;
     display: inline-block;
     overflow: hidden;
-    padding: 0.625rem 1.25rem;
+    padding: 1.5rem 1.25rem;
 	color: white;
     /* 10px 20px */
 }
@@ -37,10 +38,7 @@ padding: 0;
 
 .box {
 	background-color: #545456; /*DEFAULT_SELECTED_IMAGE_BACKGROUND*/
-	margin-top: 0.7rem;
 }
-
-
 
 
 .brd {
@@ -48,13 +46,14 @@ padding: 0;
     border-width: 2rem;
 	border-color: #545456; /*DEFAULT_SELECTED_IMAGE_BACKGROUND*/
 	background-color: #292929; /* DEFAULT_CONTROL_COLOR*/
-	text-align: justify; /* width-aligned */
+	text-align: left;
+	word-break: break-all;
 	padding: 1rem; /* text padding */
 	line-height: 1.2rem;
 	visibility: hidden;
 	font-family: "Arial";
 	word-wrap: break-word; 
-	color: yellow; /*default color*/ 
+	color: white; /*default color*/ 
 }
 
 .debug {
