--- a/style.css
+++ b/style.css
@@ -1,74 +1,79 @@
-p
-{
-margin: 0;
-padding: 0;
-}
-
 .inputfile {
-    width: 0.1px;
-    height: 0.1px;
     opacity: 0;
     overflow: hidden;
-    position: absolute;
     z-index: -1;
 }
 
-.inputfile + label {
-    max-width: 80%;
-    font-size: 1.25rem;
-    /* 20px */
-    font-weight: 700;
-	font-family: "Arial";
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    cursor: pointer;
-    display: inline-block;
-    overflow: hidden;
-    padding: 1.5rem 1.25rem;
-	color: white; 
-    /* 10px 20px */
+.inputlabel {
+}
+
+.inputfile {
+    width: 100%;
+    height: 100%;
+}
+
+div.labelstyle {
+    width: 400px;
+    height: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    color: white;
 }
 
 .inputfile:focus + label {
-	outline: 1px dotted #000;
-	outline: -webkit-focus-ring-color auto 5px;
+    outline: 4px dotted #000;
+    outline: -webkit-focus-ring-color auto 5px;
 }
 
-
-
 .box {
-	background-color: #545456; /*DEFAULT_SELECTED_IMAGE_BACKGROUND*/
-	}
-
+    background-color: #545456; /*DEFAULT_SELECTED_IMAGE_BACKGROUND*/
+    height: 100px;
+    width: 100%;
+    position: relative;
+}
 
 .brd {
     border-style: solid;
     border-width: 2rem;
-	border-color: #545456; /*DEFAULT_SELECTED_IMAGE_BACKGROUND*/
-	background-color: #292929; /* DEFAULT_CONTROL_COLOR*/
-	text-align: left;
-	word-break: break-all;
-	padding: 1rem; /* text padding */
-	line-height: 1.2rem;
-	visibility: hidden;
-	font-family: "Arial";
-	word-wrap: break-word; 
-	color: white; /*default color*/ 
+    border-color: #545456; /*DEFAULT_SELECTED_IMAGE_BACKGROUND*/
+    background-color: #292929; /* DEFAULT_CONTROL_COLOR*/
+    text-align: left;
+    word-break: break-all;
+    padding: 1rem; /* text padding */
+    line-height: 1.2rem;
+    visibility: hidden;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    word-wrap: break-word;
+    color: white; /*default color*/
+}
+
+.logitem {
+    margin: 0;
+    padding: 0;
 }
 
 .debug {
- color: #999999; /*DEFAULT_LABEL_ACTIVE_FOREGROUND*/
-}
-.info {
- color: #ffffff; /*DEFAULT_WHITE_COLOR "#ffffff*/
-}
-.warning {
- color: #ffffff; /*DEFAULT_WHITE_COLOR "#ffffff*/
-}
-.critical {
- color: #D10B0B; /*DEFAULT_DESTRUCTIVE_COLOR*/
-}
-.fatal {
- color: #D10B0B; /*DEFAULT_DESTRUCTIVE_COLOR*/
+    color: #999999; /*DEFAULT_LABEL_ACTIVE_FOREGROUND*/
 }
 
+.info {
+    color: #ffffff; /*DEFAULT_WHITE_COLOR "#ffffff*/
+}
+
+.warning {
+    color: #ffffff; /*DEFAULT_WHITE_COLOR "#ffffff*/
+}
+
+.critical {
+    color: #D10B0B; /*DEFAULT_DESTRUCTIVE_COLOR*/
+}
+
+.fatal {
+    color: #D10B0B; /*DEFAULT_DESTRUCTIVE_COLOR*/
+}
